[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TestLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 509.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 509, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )

[node name="TestLevel" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 515.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 509, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )

[node name="Minimap" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -181.0
margin_top = -137.0
margin_right = 181.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Minimap"]
size = Vector2( 362, 137 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Minimap/Viewport"]
position = Vector2( 512, 300 )
current = true
zoom = Vector2( 9, 9 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
